Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <body>
 
   <!-- Write your HTML in this file -->
+  
+  <ul>
+    <li>2 slices of bread</li>
+    <li>4 slices of cheese</li>
+    <li>1 tbsp pf butter</li>
+  </ul>
 
 </body>
 </html>
