--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <li>2 slices of bread</li>
     <li>4 slices of cheese</li>
       <ul>
-        <li></li>
+        <li>cheddar</li>
+        <li>mozarella</li>
+        <li>pepper jack</li>
       </ul>
     <li>1 tbsp of butter</li>
   </ul>
